fix refresh logic
